[package]
name = "sculptor"
version = "0.0.0"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "(Placeholder of) an app framework that uses configuration files."
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/sculptor"
repository = "https://github.com/LighghtEeloo/sculptor"
license = "MIT"
keywords = ["cli", "configuration"]
categories = ["command-line-utilities"]

[dependencies]
