[package]
name = "sculptor"
version = "0.0.0"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "(Placeholder of) an app framework that uses configuration files."
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/sculptor"
repository = "https://github.com/LighghtEeloo/sculptor"
license = "MIT"
keywords = ["cli", "configuration"]
categories = ["command-line-utilities"]

[dependencies]

# static
once_cell = "1.8"

# logging
log = "0.4"
env_logger = "0.11"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# path management
directories = "5.0"
shellexpand = { version = "3.0", features = ["path"] }

# time
time = { version = "0.3", features = ["formatting"] }
