[package]
name = "sculptor"
version = "0.0.7"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "(Placeholder of) an app framework that uses configuration files."
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/sculptor"
repository = "https://github.com/LighghtEeloo/sculptor"
license = "MIT"
keywords = ["cli", "configuration"]
categories = ["command-line-utilities"]

[features]
project_info = ["dep:directories", "dep:once_cell"]
file_io = ["dep:time", "dep:serde", "dep:toml", "dep:serde_json"]
sha_snap = ["dep:sha2"]

[dependencies]

# static
once_cell = { version = "1.8", optional = true }

# logging
log = "0.4"
env_logger = "0.11"

# serde
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8", features = ["preserve_order"], optional = true }
# toml_edit = { version = "0.22", optional = true }

# path management
directories = { version = "5.0", optional = true }
# shellexpand = { version = "3.0", features = ["path"], optional = true }

# time
time = { version = "0.3", features = ["formatting"], optional = true }

# fingerprint
sha2 = { version = "0.10", optional = true }
